Add user wishlist functionality - Implement add, remove, and display wishlist items - Update User entity and service to handle wishlist - Create WishlistController - Modify HTML templates for wishlist actions